--- a/docs/docs/self-hosting/oauth.mdx
+++ b/docs/docs/self-hosting/oauth.mdx
@@ -1,4 +1,4 @@
-# OAuth
+# 🔐 OAuth
 
 On the public [Retrospected](https://www.retrospected.com) website, you will have noticed that people can register and login in one click using an OAuth provider:
 
