--- a/docs/docs/self-hosting/sendgrid.mdx
+++ b/docs/docs/self-hosting/sendgrid.mdx
@@ -1,4 +1,4 @@
-# Sendgrid
+# 📧 Sendgrid
 
 By default, and when using the basic configuration in the [quick-start](quick-start) page, 
 your users will be able to register using an email without having to verify that email.
