--- a/frontend/src/translations/locales/pt-BR.json
+++ b/frontend/src/translations/locales/pt-BR.json
@@ -266,7 +266,7 @@
     "cancelButton": "Não, obrigado."
   },
   "AccountPage": {
-    "noEmptyNameError": "You cannot choose an empty display name. Please try again.",
+    "noEmptyNameError": "",
     "anonymousError": "Contas anônimas não podem ter acesso ao seu perfil (porque não têm uma).",
     "details": {
       "header": "Suas informações",
