--- a/frontend/src/translations/locales/de-DE.json
+++ b/frontend/src/translations/locales/de-DE.json
@@ -19,7 +19,8 @@
     }
   },
   "Home": {
-    "welcome": "Willkommen, {{name}}"
+    "welcome": "Willkommen, {{name}}",
+    "howDoesThatWork": "Wie funktioniert das?"
   },
   "PreviousGame": {
     "createdBy": "Erstellt von",
