--- a/frontend/src/translations/locales/en-GB.json
+++ b/frontend/src/translations/locales/en-GB.json
@@ -276,6 +276,10 @@
       "accountType": "Account Type",
       "language": "Language"
     },
+    "slack": {
+      "header": "Slack Integration",
+      "help": "Add the Retrospected Bot to your slack workspace, and get the ability to start a retro with a simple command: '/retro My Retro'."
+    },
     "plan": {
       "header": "Your Plan",
       "plan": "Plan",
