--- a/frontend/src/translations/locales/en-GB.json
+++ b/frontend/src/translations/locales/en-GB.json
@@ -278,7 +278,8 @@
     },
     "slack": {
       "header": "Slack Integration",
-      "help": "Add the Retrospected Bot to your slack workspace, and get the ability to start a retro with a simple command: '/retro My Retro'."
+      "help": "Add the Retrospected Bot to your slack workspace, and get the ability to start a retro with a simple command: '/retro My Retro'.",
+      "addToSlack": "Add to Slack"
     },
     "plan": {
       "header": "Your Plan",
