--- a/frontend/src/translations/locales/en-GB.json
+++ b/frontend/src/translations/locales/en-GB.json
@@ -284,6 +284,7 @@
     "plan": {
       "header": "Your Plan",
       "plan": "Plan",
+      "admins": "Administrators",
       "youAreOwner": "You are the owner of this plan, through the subscription below.",
       "youAreMember": "You are on this plan through somebody else's subscription.",
       "ownedBy": "Owned By"
