--- a/frontend/src/translations/locales/en-GB.json
+++ b/frontend/src/translations/locales/en-GB.json
@@ -78,8 +78,8 @@
     "allowSelfVotingHelp": "Whether to allow a user to vote on their own post",
     "allowMultipleVotes": "Allow Multiple Votes",
     "allowMultipleVotesHelp": "Whether to allow a user to vote multiple times on the same post",
-    "allowCancelVote": "Allow Changing Vote",
-    "allowCancelVoteHelp": "Whether to allow a user to cancel their vote, changing their mind.",
+    "allowCancelVote": "Allow Cancel Votes",
+    "allowCancelVoteHelp": "Whether to allow a user to cancel their vote on a specific post",
     "allowActions": "Allow Actions",
     "allowActionsHelp": "Whether to allow the 'Action' (follow-up) field on each post",
     "allowAuthorVisible": "Show Author",
