Favicons and other stuff

--- a/marketing/public/locales/en/common.json
+++ b/marketing/public/locales/en/common.json
@@ -16,8 +16,8 @@
 		"testimonial": "Testimonials",
 		"pricing": "Pricing",
 		"faq": "FAQ",
-		"login": "Login Now",
-		"join": "Join Free"
+		"subscribe": "Subscribe",
+		"login": "Login"
 	},
 	"Clients": {
 		"main": "Join the hundreds of companies using our product"
