--- a/marketing/public/locales/fr/common.json
+++ b/marketing/public/locales/fr/common.json
@@ -16,8 +16,8 @@
 		"testimonial": "Témoignages",
 		"pricing": "Tarifs",
 		"faq": "FAQ",
-		"login": "Connexion",
-		"join": "Inscription"
+		"subscribe": "Achetez",
+		"login": "Connectez-vous"
 	},
 	"Clients": {
 		"main": "Rejoingnez les centaines d'entreprises qui nous ont fait confiance"
