--- a/marketing/public/locales/en/common.json
+++ b/marketing/public/locales/en/common.json
@@ -61,6 +61,7 @@
 	},
 	"Pricing": {
 		"heading": "Explore our exciting pricing",
+		"weAccept": "We also accept Euros and British Pounds",
 		"monthly": "Monthly",
 		"yearly": "Yearly",
 		"perMonth": " / month",
