--- a/marketing/public/locales/de/common.json
+++ b/marketing/public/locales/de/common.json
@@ -61,6 +61,7 @@
 	},
 	"Pricing": {
 		"heading": "Entdecken Sie unsere aufregenden Preise",
+		"weAccept": "Wir akzeptieren auch Euro und britische Pfund",
 		"monthly": "Monatlich",
 		"yearly": "Jährlich",
 		"perMonth": " / Monat",
