--- a/marketing/public/locales/nl/common.json
+++ b/marketing/public/locales/nl/common.json
@@ -61,6 +61,7 @@
 	},
 	"Pricing": {
 		"heading": "Ontdek onze spannende prijzen",
+		"weAccept": "We accepteren ook Euros en Britse ponden",
 		"monthly": "maandelijks",
 		"yearly": "Jaarlijks",
 		"perMonth": " / maand",
