--- a/marketing/public/locales/de/common.json
+++ b/marketing/public/locales/de/common.json
@@ -188,6 +188,7 @@
 		"hint": "Das wird dein Leben ändern!"
 	},
 	"Footer": {
+		"legal": "Legal Stuff",
 		"copyright": "Copyright © 2023 - Retrospected Ltd. Alle Rechte vorbehalten.",
 		"about": "Wir erstellen Software mit Love, aus London, Großbritannien"
 	},
