--- a/marketing/public/locales/nl/common.json
+++ b/marketing/public/locales/nl/common.json
@@ -188,6 +188,7 @@
 		"hint": "Dit zal je leven veranderen!"
 	},
 	"Footer": {
+		"legal": "Legal Stuff",
 		"copyright": "Copyright © 2023 - Retrospected Ltd. Alle rechten voorbehouden.",
 		"about": "We maken software met Liefe, uit Londen, VK"
 	},
