Move banner image on the right

--- a/marketing/public/locales/fr/common.json
+++ b/marketing/public/locales/fr/common.json
@@ -4,7 +4,7 @@
 		"description": "Retrospectives gratuites et temps-réel pour équipes agiles"
 	},
 	"Banner": {
-		"heading": "Rétrospectives fun & efficaces =\nÉquipes performantes & motivées !",
+		"heading": "Vous n'oublierez jamais votre première retro.",
 		"text": "Donnez une platforme moderne et simple à vos équipes, pour soutenir leur collaboration et leur amélioration continue",
 		"tagline": "*Aucune carte bancaire demandée",
 		"subscribeToday": "Essayez gratuitement"
@@ -114,7 +114,7 @@
 		}
 	},
 	"SelfHosted": {
-		"slogan": "Auto-hébergement",
+		"slogan": "Hébergé",
 		"title": "Retrospected sur votre serveur",
 		"desc": "Gardez un contrôle complet de vos données en auto-hébergeant Retrospected. Un seul paiement, des mises à jour illimitées. Installez Retrospected avec notre documentation en un rien de temps.",
 		"features": [
