Démo en un click

--- a/marketing/public/locales/fr/common.json
+++ b/marketing/public/locales/fr/common.json
@@ -7,7 +7,8 @@
 		"heading": "Vous n'oublierez jamais votre première retro.",
 		"text": "Donnez une platforme moderne et simple à vos équipes, pour soutenir leur collaboration et leur amélioration continue",
 		"tagline": "*Aucune carte bancaire demandée",
-		"subscribeToday": "Essayez gratuitement"
+		"subscribeToday": "Essayez gratuitement",
+		"demo": "Démo en 1 clic"
 	},
 	"Nav": {
 		"home": "Accueil",
