--- a/marketing/public/locales/nl/common.json
+++ b/marketing/public/locales/nl/common.json
@@ -7,7 +7,8 @@
 		"heading": "Real-time Retrospectieven. Gereed. In seconden.",
 		"text": "Omdat de aantekeningen na het bericht niet zullen knippen.",
 		"tagline": "*Geen creditcard nodig",
-		"subscribeToday": "Probeer het gratis"
+		"subscribeToday": "Probeer het gratis",
+		"demo": "1-Click Demo"
 	},
 	"Nav": {
 		"home": "Startpagina",
