--- a/marketing/public/locales/de/common.json
+++ b/marketing/public/locales/de/common.json
@@ -7,7 +7,8 @@
 		"heading": "Echtzeit-Retrospektiven. Recht. In Sekunden.",
 		"text": "Weil Post-it-Notizen nicht geschnitten werden.",
 		"tagline": "*Keine Kreditkarte erforderlich",
-		"subscribeToday": "Kostenlos testen"
+		"subscribeToday": "Kostenlos testen",
+		"demo": "1-Click Demo"
 	},
 	"Nav": {
 		"home": "Zuhause",
