--- a/marketing/public/locales/en/common.json
+++ b/marketing/public/locales/en/common.json
@@ -7,7 +7,8 @@
 		"heading": "Real-time Retrospectives. Done right. In seconds.",
 		"text": "Because Post-It notes aren't going to cut it.",
 		"tagline": "*No Credit card required",
-		"subscribeToday": "Try it for free"
+		"subscribeToday": "Try it for free",
+		"demo": "1-Click Demo"
 	},
 	"Nav": {
 		"home": "Home",
