--- a/marketing/public/locales/de/common.json
+++ b/marketing/public/locales/de/common.json
@@ -4,8 +4,8 @@
 		"description": "Kostenloses Echtzeit-Agile Retrospektive Board für Ingenieurteams"
 	},
 	"Banner": {
-		"heading": "Echtzeit-Retrospektiven. Recht. In Sekunden.",
-		"text": "Weil Post-it-Notizen nicht geschnitten werden.",
+		"heading": "You will **never forget** your first **retro**.",
+		"text": "Real-time, collaborative retrospectives done right. In seconds.",
 		"tagline": "*Keine Kreditkarte erforderlich",
 		"subscribeToday": "Kostenlos testen",
 		"demo": "1-Click Demo"
