--- a/marketing/public/locales/fr/common.json
+++ b/marketing/public/locales/fr/common.json
@@ -4,8 +4,8 @@
 		"description": "Retrospectives gratuites et temps-réel pour équipes agiles"
 	},
 	"Banner": {
-		"heading": "Vous n'oublierez jamais votre première retro.",
-		"text": "Donnez une platforme moderne et simple à vos équipes, pour soutenir leur collaboration et leur amélioration continue",
+		"heading": "Vous n'**oublierez jamais** votre première **rétro**.",
+		"text": "Donnez une platforme **moderne** et **simple** à vos équipes, pour soutenir leur collaboration et leur **amélioration continue**.",
 		"tagline": "*Aucune carte bancaire demandée",
 		"subscribeToday": "Essayez gratuitement",
 		"demo": "Démo en 1 clic"
