--- a/marketing/public/locales/nl/common.json
+++ b/marketing/public/locales/nl/common.json
@@ -4,8 +4,8 @@
 		"description": "Gratis Real-time Agile Retrospective Board voor technische teams"
 	},
 	"Banner": {
-		"heading": "Real-time Retrospectieven. Gereed. In seconden.",
-		"text": "Omdat de aantekeningen na het bericht niet zullen knippen.",
+		"heading": "You will **never forget** your first **retro**.",
+		"text": "Real-time, collaborative retrospectives done right. In seconds.",
 		"tagline": "*Geen creditcard nodig",
 		"subscribeToday": "Probeer het gratis",
 		"demo": "1-Click Demo"
