--- a/marketing/public/locales/en/common.json
+++ b/marketing/public/locales/en/common.json
@@ -4,8 +4,8 @@
 		"description": "Free Real-time Agile Retrospective Board for engineering teams"
 	},
 	"Banner": {
-		"heading": "Real-time Retrospectives. Done right. In seconds.",
-		"text": "Because Post-It notes aren't going to cut it.",
+		"heading": "You will **never forget** your first **retro**.",
+		"text": "Real-time, collaborative retrospectives done right. In seconds.",
 		"tagline": "*No Credit card required",
 		"subscribeToday": "Try it for free",
 		"demo": "1-Click Demo"
