Various changes from Jlo

--- a/marketing/public/locales/fr/common.json
+++ b/marketing/public/locales/fr/common.json
@@ -5,7 +5,7 @@
 	},
 	"Banner": {
 		"heading": "Vous n'**oublierez jamais** votre première **rétro**.",
-		"text": "Donnez une platforme **moderne** et **simple** à vos équipes, pour soutenir leur collaboration et leur **amélioration continue**.",
+		"text": "Soutenez la **collaboration** et l'**amélioration continue** de vos équipes avec une plateforme **moderne** et **intuitive**.",
 		"tagline": "*Aucune carte bancaire demandée",
 		"subscribeToday": "Essayez gratuitement",
 		"demo": "Démo en 1 clic"
