--- a/marketing/public/locales/de/common.json
+++ b/marketing/public/locales/de/common.json
@@ -4,11 +4,11 @@
 		"description": "Kostenloses Echtzeit-Agile Retrospektive Board für Ingenieurteams"
 	},
 	"Banner": {
-		"heading": "You will **never forget** your first **retro**.",
+		"heading": "Du wirst **nie vergessen** deinen ersten **Retro**.",
 		"text": "Real-time, collaborative retrospectives done right. In seconds.",
 		"tagline": "*Keine Kreditkarte erforderlich",
 		"subscribeToday": "Kostenlos testen",
-		"demo": "1-Click Demo"
+		"demo": "1-Klick-Demo"
 	},
 	"Nav": {
 		"home": "Zuhause",
@@ -189,7 +189,7 @@
 		"hint": "Das wird dein Leben ändern!"
 	},
 	"Footer": {
-		"legal": "Legal Stuff",
+		"legal": "Rechtliche Daten",
 		"copyright": "Copyright © 2023 - Retrospected Ltd. Alle Rechte vorbehalten.",
 		"about": "Wir erstellen Software mit Love, aus London, Großbritannien"
 	},
